<resources>
    <string name="facebook_app_id">1688543904720011</string>
    <string name="app_name">BEatery</string>
    <string name="url_content_host">content</string>
    <string name="url_scheme">BEatery</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="url_eatery_information">information</string>
    <string name="url_path_eatery">/event</string>
    <string name="title_eatery_detail_information">Eatery Information</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="loading">Loading on&#8230;</string>
    <string name="update_dialog_title">Update</string>
    <string name="update_dialog_btn_title">Update</string>
    <string name="logout">Logging out&#8230;</string>
    <string name="progress_login">Logging in&#8230;</string>
    <string name="toast_login_fail">Login failed</string>
    <string name="custom_dialog_login_title">Login</string>
    <string name="custom_dialog_notification_title">Notification</string>
    <string name="custom_dialog_exit_button">Exit</string>
    <string name="custom_dialog_login_button">OK</string>
    <string name="login_fragment_title">SNS Log in</string>
    <string name="custom_dialog_login_facebook_no_email">You must provide your Facebook email to BEatery if you want to use it.</string>
    <string name="google_login_fragment_button">Google+ Log in</string>
    <string name="custom_dialog_login_action_confirm">Confirm</string>
    <string name="facebook_login_fragment_button">Facebook Log in</string>
    <string name="custom_dialog_button_cancel">Cancel</string>
    <string name="custom_dialog_button_ok">OK</string>
    <string name="title_image_chooser">Select a image</string>
    <string name="label_image_from_gallery">Load a image</string>
    <string name="label_image_from_camera">Take a photo</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_profile">Profile</string>
    <string name="title_terms">Terms</string>
    <string name="not_connected_internet">No Internet\n Connection.</string>
    <string name="signup_picture_desc">Select a picture.</string>
    <string name="toast_signup_nickname_required">Please input your nickname.</string>
    <string name="toast_signup_image_pick_fail">Unable to load the image.</string>
    <string name="toast_signup_login_fail">Unable to authenticate your account..</string>
    <string name="toast_permission_denied">Permission denied.</string>
    <string name="cutom_dialog_signup_title_success">Sign up complete</string>
    <string name="cutom_dialog_signup_message_error">An error has occurred. Please try again.</string>
    <string name="cutom_dialog_signup_message_nickname_warning">Nickname is already in use or that contain banned words.\nPlease enter your nickname again.</string>
    <string name="cutom_dialog_signup_message_camera_error">Unable to load the picture.</string>
    <string name="spiner_signup_hint_sex">Please select your gender.</string>
    <string name="spiner_signup_birth">Birth</string>
    <string name="signup_sex">Sex</string>
    <string name="signup_agree_desc">I agree to the Terms of Use and Privacy Policy .</string>
    <string name="signup_keyword_agree_terms">Terms of Use</string>
    <string name="signup_keyword_agree_policy">Privacy Policy</string>
    <string name="signup_actionbar_next">Next</string>
    <string name="signup_spinner_sex_male">Man</string>
    <string name="signup_spinner_sex_female">Women</string>
    <string name="signup_spinner_sex_etc">Etc</string>
    <string name="change_profile_actionbar_next">Change</string>
    <string name="progress_signup">On joining....</string>
    <string name="progress_change_profile">On changing....</string>
    <string name="terms_service_phase">Terms of Service</string>
    <string name="terms_agree_phase">Agreement</string>
    <string name="user_picture_resize_phase">Please resize the picture.</string>
    <string name="user_picture_setting_phase">Resize-picture.</string>
    <string name="comment_phase">Comments</string>
    <string name="like_phase">Likes</string>
    <string name="hint_comment">Input your comment</string>
    <string name="post_button">Post</string>
    <string name="view_older_comments">View older comments</string>
    <string name="daily_menu">Daily Menu : </string>
    <string name="toast_eatery_info_fetch_fail">Unable to get information of the eatery.</string>
    <string name="toast_comment_send_fail">Your comment could not be sent. Please try again later.</string>
    <string name="toast_select_hangout_success">This hangout has been registered in your hangout-list.</string>
    <string name="toast_select_hangout_failure">The hangout hasn’t registered in your hangout-list.</string>
    <string name="Thumbnail">Thumbnail</string>
    <string name="connected_fail_finish">Exit the app.</string>
    <string name="progress_dialog_phase">Checking your location&#8230;</string>
    <string name="eatery_information">information</string>
    <string name="eatery_gallery">Gallery</string>
    <string name="eatery_search_by_name">Name</string>
    <string name="eatery_search_by_address">Address</string>
    <string name="hint_search">Please enter a keyword.</string>
    <string name="do_search">Search</string>
    <string name="toast_search_result_none">No results.</string>
    <string name="toast_process_error">This app is going to exit due to an error of data processing.</string>
    <string name="toast_no_items">No items.</string>
    <string name="fab_menu_best_eatery">Best Eatery</string>
    <string name="fab_menu_closest_eatery">Closest Eatery</string>
    <string name="fab_menu_optimal_eatery">Optimal Eatery</string>
    <string name="fab_menu_request_taste">Request Review</string>
    <string name="fab_menu_view_my_hangout">View my best hangouts</string>
    <string name="fab_menu_my_profile">Profile</string>
    <string name="fab_menu_select_hangout">Select my best hangout</string>
    <string name="fab_menu_view_gallery">View gallery</string>
    <string name="fab_menu_view_event">View event</string>
    <string name="fab_menu_share_eatery">Share</string>
    <string name="event_actionbar_more">More</string>
    <string name="title_activity_view_eatery_map">Map</string>
    <string name="best_menu_phase">The best menu is </string>
</resources>
