<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#000">

    <view
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.goforer.base.ui.view.CropImageView"
        android:id="@+id/iv_crop_picture"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button_cancel"
            android:id="@+id/tv_cancel"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/user_picture_setting_phase"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button_ok"
            android:id="@+id/tv_done"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_picture_resize_phase"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

</RelativeLayout>