<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eatery_container"
        android:gravity="bottom" >

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fam_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="10dp"
            fab:menu_labels_style="@style/MenuLabelsStyle"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_icon="@drawable/ic_menu"
            fab:menu_animationDelayPerItem="0"
            fab:menu_fab_size="mini"
            fab:menu_colorNormal="@color/fab_color_normal"
            fab:menu_colorPressed="@color/fab_color_pressed"
            fab:menu_colorRipple="@color/fab_color_ripple"
            fab:menu_labels_singleLine="true"
            fab:menu_labels_ellipsize="end"
            fab:menu_openDirection="down" >

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_share"
                fab:fab_label="@string/fab_menu_share_eatery"
                style="@style/MenuButtonsSmall.EateryList" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_event"
                fab:fab_label="@string/fab_menu_view_event"
                style="@style/MenuButtonsSmall.EateryList" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_gallery"
                fab:fab_label="@string/fab_menu_view_gallery"
                style="@style/MenuButtonsSmall.EateryList" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_hangout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fab_hangout"
                fab:fab_label="@string/fab_menu_select_hangout"
                style="@style/MenuButtonsSmall.EateryList" />

        </com.github.clans.fab.FloatingActionMenu>

        <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/swipyrefreshlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/comment_bar"
            app:direction="both">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>

        <include
            android:id="@+id/comment_bar"
            layout="@layout/layout_comment_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignWithParentIfMissing="true" />

        <FrameLayout
            android:id="@+id/comment_holder"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/black_alpha_35"
            android:layout_alignParentBottom="true"
            android:visibility="gone" />

    </RelativeLayout>


</RelativeLayout>